add: delete task button behaviour - html&css&js

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                                 </div>
 
-                                <em class="clickable container-tags">
+                                <em class="clickable container-tags" @click="deleteTask(taskIndex)">
                                     <i class="fa-regular fa-trash-can"></i>
                                 </em>
 
